add tests and dependency for test for application.java