@@ -64,13 +64,20 @@
     </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
-      <scope>test</scope>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.2</version>
+        <scope>test</scope>
+      </dependency>
+
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>5.7.0</version>
+        <scope>test</scope>
     </dependency>
+
   </dependencies>
-  
 
   <build>
   <plugins>
@@ -84,6 +91,7 @@
         --add-opens java.base/java.util=ALL-UNNAMED
         --add-opens java.base/java.lang=ALL-UNNAMED
         --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
+        -Dnet.bytebuddy.experimental=true
       </argLine>
     </configuration>
     </plugin>
